<resources>
    <string name="ktv_join">加入</string>
    <string name="ktv_score">评分</string>
    <string name="ktv_loading">加载中…</string>
    <string name="ktv_create_room">创建房间</string>
    <string name="ktv_room_title">房间名称</string>
    <string name="ktv_random">随机</string>
    <string name="ktv_room_name_hint">填写房间名称，吸引更多观众</string>
    <string name="ktv_please_input_4_pwd">请设置4位数房间密码</string>
    <string name="ktv_room_pwd">房间加密</string>
    <string name="ktv_create_room_tips">本应用为测试产品，仅用于功能体验，请勿商用。单次使用时长不超过20分钟，过时房问将自动解散。为配合相关部门监管要求，严禁色情、辱骂、暴恐、涉政等违规内容。警惕电信诈骗，请勿在使用过程中进行货款申请和网银转账！国家反诈专用号码：96110</string>
    <string name="ktv_net_status_good">本机网络好</string>
    <string name="ktv_net_status_m">本机网络良</string>
    <string name="ktv_net_status_low">本机网络差</string>
    <string name="ktv_net_status_un_know">本机网络未知</string>
    <string name="ktv_please_input_room_name">请输入房间名称</string>
    <string name="ktv_empty_search">未找到相关结果</string>
    <string name="ktv_song_and_singer" translatable="false">%s - %s</string>
    <string name="ktv_please_use_headset">请插入耳机使用耳返功能</string>
    <string name="ktv_input_remote_volume">请输入0到100的正整数</string>
    <string name="ktv_mv">MV</string>
    <string name="ktv_song_background">歌词背景</string>
    <string name="ktv_more_actions">更多操作</string>
    <string name="ktv_create_tips1">欢迎来到声网在线K歌房，\n美声音效、歌词同步、打分等九大场景轻松还\n原线下K歌体验，超高音质，以歌会友，一起\n来体验吧！</string>
    <string name="ktv_room_before_speaker">点击空麦位，上麦后可点歌与发言</string>
    <string name="ktv_room_owner">房主</string>
    <string name="ktv_room_sing1">演唱中</string>
    <string name="ktv_room_sing1_1">合唱中</string>
    <string name="ktv_room_original">原唱</string>
    <string name="ktv_room_daochang">导唱</string>
    <string name="ktv_room_change_song">切歌</string>
    <string name="ktv_room_seat_off">下麦</string>
    <string name="ktv_room_player_pause">暂停</string>
    <string name="ktv_room_player_play">播放</string>
    <string name="ktv_room_player_tweak">调音</string>
    <string name="ktv_room_choose_song">点歌</string>
    <string name="ktv_room_choose_song_loading">加载中</string>
    <string name="ktv_room_chosen_song_list">已点</string>
    <string name="ktv_room_sing2">演唱中</string>
    <string name="ktv_room_no_sing">当前无人演唱\n点击“点歌”一展歌喉</string>
    <string name="ktv_dialog_migu_tip" />
    <string name="ktv_dialog_music_list_empty">未找到相关搜索结果</string>
    <string name="ktv_dialog_music_list_search_hint">搜索歌曲</string>
    <string name="ktv_lrc_loading">歌曲准备中</string>
    <string name="ktv_lrc_load_fail">加载失败</string>
    <string name="ktv_room_change_music_title">切歌</string>
    <string name="ktv_room_change_music_msg">终止当前歌曲的演唱？</string>
    <string name="ktv_room_time_wait_join_chorus">等待加入合唱</string>
    <string name="ktv_room_time_join_chorus_">抢麦倒计时</string>
    <string name="ktv_room_time_wait">%02d:%02d</string>
    <string name="ktv_music_join_chorus">加入合唱</string>
    <string name="ktv_music_chorus_start_now">不等了，独唱</string>
    <string name="ktv_use_overtime">试用时间已到</string>
    <string name="ktv_need_up">请先上坐</string>
    <string name="ktv_error_cut">该歌曲无法进行人声切换</string>
    <string name="ktv_join_error">加入房间失败</string>
    <string name="ktv_sync_music_error">同步歌曲失败</string>
    <string name="ktv_leave_title">关闭歌房</string>
    <string name="ktv_leave_msg">关闭歌房后所有成员将被移除房间</string>
    <string name="ktv_music_menu_dialog_title">控制台</string>
    <string name="ktv_music_menu_dialog_ear">耳返设置</string>
    <string name="ktv_music_menu_dialog_tone">升降调</string>
    <string name="ktv_music_menu_dialog_mic_vol">人声音量</string>
    <string name="ktv_music_menu_dialog_remote_vol">远端音量</string>
    <string name="ktv_music_menu_dialog_acc_vol">伴奏音量</string>
    <string name="ktv_music_menu_dialog_effect">效果</string>
    <string name="ktv_song_rank_1">热歌榜</string>
    <string name="ktv_song_rank_2">嗨唱推荐</string>
    <string name="ktv_song_rank_3">抖音热歌</string>
    <string name="ktv_song_rank_4">古风热歌</string>
    <string name="ktv_song_rank_5">KTV必唱</string>
    <string name="ktv_song_rank_6">新歌榜</string>
    <string name="ktv_song_rank_7">热门新歌</string>
    <string name="ktv_song_search_place_holder">搜索歌曲、歌手</string>
    <string name="ktv_song_effect_1">空间塑造</string>
    <string name="ktv_song_effect_2">曲风音效</string>
    <string name="ktv_song_effect_3">电音音效</string>
    <string name="ktv_song_effect_4">更多音效</string>
    <string name="ktv_start_electric_sound">启动电音</string>
    <string name="ktv_select_mode">选择调式</string>
    <string name="ktv_gentle_wind">和风</string>
    <string name="ktv_minor">小调</string>
    <string name="ktv_major">大调</string>
    <string name="ktv_select_starting_scale">选择起始音阶</string>
    <string name="ktv_effect_a">A</string>
    <string name="ktv_effect_a_2">A#</string>
    <string name="ktv_effect_b">B</string>
    <string name="ktv_effect_c">C</string>
    <string name="ktv_effect_c_2">C#</string>
    <string name="ktv_effect_d">D</string>
    <string name="ktv_effect_d_2">D#</string>
    <string name="ktv_effect_e">E</string>
    <string name="ktv_effect_f">F</string>
    <string name="ktv_effect_f_2">F#</string>
    <string name="ktv_effect_g">G</string>
    <string name="ktv_effect_g_2">G#</string>
    <string name="ktv_def_nothing">默认无</string>
    <string name="ktv_room_big_man">大房间(男)</string>
    <string name="ktv_room_small_man">小房间(男)</string>
    <string name="ktv_room_big_woman">大房间(女)</string>
    <string name="ktv_room_small_woman">小房间(女)</string>
    <string name="ktv_your_score">你的得分</string>
    <string name="ktv_room_count">%d在线</string>
    <string name="ktv_zc">主唱</string>
    <string name="ktv_hc">合唱</string>
    <string name="ktv_song_ordering_person">点唱：</string>
    <string name="ktv_song_ordering_person_chorus">合唱：</string>
    <string name="ktv_people_count">%d人</string>
    <string name="ktv_music_menu_dialog_mv">MV</string>
    <string name="ktv_score_formatter">%s分</string>
    <string name="ktv_beauty_voice">美声</string>
    <string name="ktv_voice_effect">音效</string>
    <string name="ktv_camera">摄像头</string>
    <string name="ktv_leave_chorus">退出合唱</string>
    <string name="ktv_voice_profile">配置</string>
    <string name="ktv_voice_scoring_difficulty">打分难度</string>
    <string name="ktv_voice_scoring_difficulty_low">低难度</string>
    <string name="ktv_voice_scoring_difficulty_recommend">推荐难度</string>
    <string name="ktv_voice_scoring_difficulty_high">高难度</string>
    <string name="ktv_voice_professional">专业主播</string>
    <string name="ktv_voice_multipath">使用移动网络改善体验</string>
    <string name="ktv_voice_multipath_tips">如Wi-Fi下网络质量差，将使用移动网络改善</string>
    <string name="ktv_voice_quality">音质</string>
    <string name="ktv_voice_quality_standard">标准音质</string>
    <string name="ktv_voice_quality_high">高音质</string>
    <string name="ktv_voice_quality_tips">aiaec关闭的情况下音质选项才能生效</string>
    <string name="ktv_voice_AINS">降低背景噪音</string>
    <string name="ktv_close">关闭</string>
    <string name="ktv_open">开启</string>
    <string name="ktv_voice_AINS_medium">中</string>
    <string name="ktv_voice_AINS_high">高</string>
    <string name="ktv_low_latency">低延迟模式</string>
    <string name="ktv_AIAEC_switcher">AIAEC 开关</string>
    <string name="ktv_AIAEC">AIAEC</string>
    <string name="ktv_AIAEC_strength">AIAEC 强度选择</string>
    <string name="ktv_AIAEC_strength_down">调高AIAEC强度</string>
    <string name="ktv_AIAEC_strength_up">调低AIAEC强度</string>
    <string name="ktv_seat_num">%s号麦</string>
    <string name="ktv_toggle_mic">麦克风启用或静音</string>
    <string name="ktv_choose_cover">选择你喜欢的歌曲封面</string>
    <string name="ktv_chorus">合唱</string>
    <string name="ktv_order_song">点歌</string>
    <string name="ktv_random_room_name">随机生成一个房间名称</string>
    <string name="ktv_tone_down">点击调低音调</string>
    <string name="ktv_tone_up">点击调高音调</string>
    <string name="ktv_remote_volume_down">点击调低远端音量</string>
    <string name="ktv_remote_volume_up">点击调高远端音量</string>
    <string name="ktv_ok">好的</string>
    <string name="ktv_done">完成</string>
    <string name="ktv_search">搜索</string>
    <string name="ktv_confirm">确定</string>
    <string name="ktv_cancel">取消</string>
    <string name="ktv_song_list_empty">歌单暂无数据</string>
    <string name="ktv_network_unavailable">未检测到可用网络，确认继续？</string>
    <string name="ktv_no_lrc">暂无歌词 </string>
    <string name="ktv_content">监测到当前内容存在违规行为</string>
    <string name="ktv_iknow">我知道了</string>
    <string name="ktv_skip_prelude">跳过前奏</string>
    <string name="ktv_skip_postlude">跳过尾奏</string>
    <string name="ktv_onseat_toast">加入合唱前，您需要先上麦</string>
    <string name="ktv_load_failed_no_song">歌曲下载失败，当前已无歌曲</string>
    <string name="ktv_load_failed">歌曲下载失败</string>
    <string name="ktv_try">已尝试三次，请手动切歌</string>
    <string name="ktv_load_failed_another_song">歌曲下载失败，当前已切换到另一首歌</string>
    <string name="ktv_too_fast">操作太频繁</string>
    <string name="ktv_lrc_failed">歌词加载失败</string>
    <string name="ktv_retry">点击重试</string>
    <string name="ktv_join_chorus_failed">加入合唱失败</string>
    <string name="ktv_earback_title">耳返</string>
    <string name="ktv_earback_mode">耳返模式</string>
    <string name="ktv_earback_switch">耳返开关</string>
    <string name="ktv_earback_setting">耳返设置</string>
    <string name="ktv_earback_volume">耳返音量</string>
    <string name="ktv_earback_auto">自动</string>
    <string name="ktv_earback_oboe">强制Oboe</string>
    <string name="ktv_earback_opensl">强制OpenSL</string>
    <string name="ktv_earback_opensl_tips">切换后将强制使用OpenSL模式，\n确认？</string>
    <string name="ktv_earback_oboe_tips">切换后将强制使用Oboe模式，\n确认？</string>
    <string name="ktv_earback_tips1">开启耳返可实时听到自己的声音，唱歌的时候及时调整</string>
    <string name="ktv_earback_tips2">因为延时和体验问题，在耳返里听到的声音是没有音效的（包括虚拟声卡、场景塑造（KTV、演唱会））</string>
    <string name="ktv_earback_no_micphone">使用耳返必须插入耳机，当前未检测到耳机</string>
    <string name="ktv_earback_delay">耳返延时</string>
    <string name="ktv_earback_delay_test">请对着耳麦说话，测试实时耳返延时</string>
    <string name="ktv_virtual_sound_card">虚拟声卡</string>
    <string name="ktv_input_device">麦克风类型</string>
    <string name="ktv_sound_card_mic_type">麦克风类型%d</string>
    <string name="ktv_external_mircrophone">default 外置麦克风</string>
    <string name="ktv_sound_card_switch">虚拟声卡开关</string>
    <string name="ktv_sound_card_error">当前无法使用虚拟声卡，请连接优先输入设备！</string>
    <string name="ktv_sound_card_supports">目前支持以下设备： \n1.有线耳机 \n2.有线麦克风</string>
    <string name="ktv_virtual_sound_card_switch">虚拟声卡开关</string>
    <string name="ktv_preset_sound">预设音效</string>
    <string name="ktv_preset_sound_dashu">大叔音</string>
    <string name="ktv_preset_sound_dashu_tips">男声唱歌1：高混响|KTV</string>
    <string name="ktv_preset_sound_mum">妈音</string>
    <string name="ktv_preset_sound_mum_tips">女声唱歌1：高混响|KTV</string>
    <string name="ktv_preset_sound_qingshu">青叔音</string>
    <string name="ktv_preset_sound_qingshu_tips">男声唱歌2：明亮 | 磁性</string>
    <string name="ktv_preset_sound_yuma">御妈音</string>
    <string name="ktv_preset_sound_yuma_tips">女声唱歌2：明亮 |磁性</string>
    <string name="ktv_preset_sound_qingnian">青年音</string>
    <string name="ktv_preset_sound_qingnian_tips">男声唱歌3：低沉 | 温暖</string>
    <string name="ktv_preset_sound_shaoyu">少御音</string>
    <string name="ktv_preset_sound_shaoyu_tips">女声唱歌3：醇厚 | 饱满</string>
    <string name="ktv_gain_adjust">增益调节</string>
    <string name="ktv_gain_adjust_tips">调节声音信号的增益倍数</string>
    <string name="ktv_sound_mic_phone_type">麦克风类型</string>
    <string name="ktv_sound_mic_phone_type_tips">选择麦克风的预设参数</string>
    <string name="ktv_sound_preset_type">预设音效</string>
    <string name="ktv_sound_preset_off">关闭</string>
    <string name="ktv_notice">提示</string>
    <string name="ktv_debug">Debug</string>
    <string name="ktv_debug_settings">开发者设置</string>
    <string name="ktv_debug_settings_scoring_difficulty">打分难度</string>
    <string name="ktv_debug_settings_scoring_compensation">打分补偿</string>
    <string name="ktv_debug_settings_private_param">私有参数</string>
    <string name="ktv_debug_settings_set">设置</string>
</resources>